# soda

./: .gitignore  CMakeLists.txt  README.md
SDL_simulator/: CMakeLists.txt  README.md  main.cpp
game_of_life_gpu/: GOL_gpu.cpp  README.md
kernels/: ca_1d.cl  ca_2d.cl  gray-scott.cl
profiling/: CPU_profiler.cpp  GPU_profiler.cpp  README.md  generate_visualizations.py  profile_runner.py
src/: main.cpp
